terraform/s6_interpolation/securitygroup.tf
resource "aws_security_group" "allow-ssh-prod" {
  vpc_id = module.vpc-prod.vpc_id
  name = "allow-ssh-prod"
  description = "security group that allows ssh and all egress traffic>"

  egress {
    from_port = 0
    protocol = "-1"
    to_port = 0
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 22
    protocol = "tcp"
    to_port = 22
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "allow-ssh"
  }
}

resource "aws_security_group" "allow-ssh-dev" {
  vpc_id = module.vpc-dev.vpc_id
  name = "allow-ssh-dev"
  description = "security group that allows ssh and all egress traffic>"

  egress {
    from_port = 0
    protocol = "-1"
    to_port = 0
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 22
    protocol = "tcp"
    to_port = 22
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "allow-ssh"
  }
}
